<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chemical_title"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/guess_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:hint="@string/chemical_guess_subtitle"
        android:inputType="text"
        android:maxLines="1"
        android:theme="@style/EditTextTheme" />

    <Button
        android:id="@+id/guess_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chemical_guess_btn" />

    <EditText
        android:id="@+id/add_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:hint="@string/chemical_add_subtitle"
        android:inputType="text"
        android:maxLines="1"
        android:theme="@style/EditTextTheme" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chemical_add_btn" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/chemical" />
</androidx.appcompat.widget.LinearLayoutCompat>